--- a/КРЗ №2 Шуранский,Лапутин АС-19-04/Report(Site)/introduction.html
+++ b/КРЗ №2 Шуранский,Лапутин АС-19-04/Report(Site)/introduction.html
@@ -15,10 +15,10 @@ function a1()
 <script language="JavaScript">
 <!--
 var num = 1
-gran = 3
+gran = 5
 function a() 
 //{ alert( num );
-{ document.pic.src="intro_sumschet/"+ num +".jpg" ;}
+{ document.pic.src="intro_registr_save/"+ num +".jpg" ;}
 //-->
 </script>
 
@@ -104,10 +104,8 @@ a:hover {color: red; font-size: 22; font-weight: bold; left: 10px; text-decorati
 <b>Задача 1:</b>
 </font><br></p>
 <p align="left"><font face="comic sans ms" size=+2 color=MidnightBlue>
-<b>Из теоретических материалов нам <u>дано:</u></b>
-<br>1. схема 4-ёх разрядного суммирующего двоичного счетчика импульсов на Т-триггерах;
-<br>2. диаграмма состояний;
-<br>3. таблица состояний.  
+<b>Из теоретических материалов с сайта http://shat307.ru/_els19/__el/indexVO.html нам <u>дана:</u></b>
+<br>схема 4-ёх разрядного регистра хранения на базе асинхронных RS-триггеров 
 <br></font></p>
 <table align=center>
 <td valign=top><A HREF="JavaScript: if (num>1) { num=num-1}; a()">
@@ -115,7 +113,7 @@ a:hover {color: red; font-size: 22; font-weight: bold; left: 10px; text-decorati
 <td>
 <div align="center">
 <A HREF="JavaScript: if (num<gran) { num=num+1}; a()">
-<IMG SRC="intro_sumschet/1.jpg" NAME="pic" BORDER=1 ></a>
+<IMG SRC="intro_registr_save/1.jpg" NAME="pic" BORDER=1 ></a>
 <br>
 </div>
 </td>
@@ -124,15 +122,14 @@ a:hover {color: red; font-size: 22; font-weight: bold; left: 10px; text-decorati
 </table>
 <p align="left"><font face="comic sans ms" size=+2 color=MidnightBlue>
 <b>А теперь нужно <u>показать</u>:</b>
-<br>1. как работает 4-ёх разрядный суммирующий счётчик
-<br>2. проверить данные теоретические материалы на практике, с помощью
-построения схемы и снятия результатов.</font></p>
+<br>как работает 4-ёх разрядный регистр хранения
+</font></p>
 <p align="left"><font face="comic sans ms" size=+2 color=MidnightBlue>
 <b><u>Как</u> мы это будем делать:</b>
 <br>1. для решения задачи воспользуемся компьютерной программой
 <a href="javascript: vv()"> <font size="+2" face="comic sans ms"> 
 Tina</font></a>, в которой построим нашу модель;
-<br>2. подавая различные сигналы на вход, получим набор выходных сигналов, который сопоставим с теоретическим.</font></p>
+<br>2. подавая различные сигналы на вход, получим набор выходных сигналов, на основе которых поймём как работает данная схема.</font></p>
 
 <br>
 <br>
