--- a/КРЗ №2 Шуранский,Лапутин АС-19-04/Report(Site)/result1.html
+++ b/КРЗ №2 Шуранский,Лапутин АС-19-04/Report(Site)/result1.html
@@ -18,11 +18,11 @@
 <br>
 <center>
 <font face="comic sans ms" size=+2 color=MidnightBlue>
-<b>4-ёх разрядный суммирующий двоичный счетчик импульсов на Т-триггерах</b><br>
+<b>4-ёх разрядный регистр хранения на базе асинхронных RS-триггеров</b><br>
 </font>
 <p align=left>
 <font face="comic sans ms" size=+1 color=MidnightBlue>
-<b>Файл решение на модели "TINA", который находится в директории "Файлы Tina" и называется "sum_schet.tsc"</b>
+<b>Файл решение на модели "TINA", который находится в директории "Tina Files" и называется "regsitrSave.tsc"</b>
 </p>
 
 
