--- a/КРЗ №2 Шуранский,Лапутин АС-19-04/Report(Site)/task1.html
+++ b/КРЗ №2 Шуранский,Лапутин АС-19-04/Report(Site)/task1.html
@@ -4,10 +4,10 @@
 <script language="JavaScript">
 <!--
 var num = 1
-gran = 8
+gran = 17
 function a() 
 //{ alert( num );
-{ document.pic.src="phot_sum_schet/"+ num +".jpg" ;}
+{ document.pic.src="phot_regist_save/"+ num +".jpg" ;}
 //-->
 </script>
 
@@ -48,13 +48,8 @@ a:hover {color: red; font-size: 22; font-weight: bold; left: 10px; text-decorati
 <p><font face="comic sans ms" size=+2 color=MidnightBlue>
 Мы будем строить в программной среде
 <a href="javascript: vv()"> <font size="+2" face="comic sans ms"> 
-Tina</font></a> схему 4-ёх разрядного суммирующего счётчика и демонстрировать его работу 
+Tina</font></a> схему 4-ёх разрядного регистра хранения на базе асинхронных RS-триггеров 
 <br><br></font></p>
-<p><font face="comic sans ms" size=+2 color=MidnightBlue>
-Проверим данную теоретическую модель и сопоставим теоретические и полученные результаты
-<br>
-<img src="intro_sumschet/1.jpg"><br></font></p>
-<br>
 <font face="comic sans ms" size=+2 color=MidnightBlue>
 <b>Решение данной задачи имеет следующий вид:</b></font>
 <table align=center>
@@ -63,7 +58,7 @@ Tina</font></a> схему 4-ёх разрядного суммирующего счётчика и демонстрировать ег
 <td>
 <div align="center">
 <A HREF="JavaScript: if (num<gran) { num=num+1}; a()">
-<IMG SRC="phot_sum_schet/1.jpg" NAME="pic" BORDER=1 ></a>
+<IMG SRC="phot_regist_save/1.jpg" NAME="pic" BORDER=1 ></a>
 <br>
 </div>
 </td>
