--- a/КРЗ №2 Шуранский,Лапутин АС-19-04/Report(Site)/task1.html
+++ b/КРЗ №2 Шуранский,Лапутин АС-19-04/Report(Site)/task1.html
@@ -46,9 +46,9 @@ a:hover {color: red; font-size: 22; font-weight: bold; left: 10px; text-decorati
 <br>
 
 <p><font face="comic sans ms" size=+2 color=MidnightBlue>
-Мы будем строить в программной среде
+Мы будем строить и смотреть как работает в программной среде
 <a href="javascript: vv()"> <font size="+2" face="comic sans ms"> 
-Tina</font></a> схему 4-ёх разрядного регистра хранения на базе асинхронных RS-триггеров 
+Tina</font></a> схема 4-ёх разрядного регистра хранения на базе асинхронных RS-триггеров 
 <br><br></font></p>
 <font face="comic sans ms" size=+2 color=MidnightBlue>
 <b>Решение данной задачи имеет следующий вид:</b></font>
