--- a/КРЗ №3 Шуранский,Лапутин АС-19-04/Report(Site)/labworkresult.html
+++ b/КРЗ №3 Шуранский,Лапутин АС-19-04/Report(Site)/labworkresult.html
@@ -11,18 +11,18 @@
 <br>
 <center>
 <font face="comic sans ms" size=+3 color=MidnightBlue>
-<b>Результат решения задачи лабораторной работы №2</b>
+<b>Результат решения задачи лабораторной работы №3</b>
 </font>
 
 <br>
 <br>
 <center>
 <font face="comic sans ms" size=+2 color=MidnightBlue>
-<b>Экспериментальное Выявление характеристик биполярных транзисторов</b><br>
+<b>Построение моделей простейших линейных усилителей на биполярных транзисторах</b><br>
 </font>
 <p align=left>
 <font face="comic sans ms" size=+1 color=MidnightBlue>
-<b>Файл решение на модели "TINA", которые находится в директории "Файлы Tina" и называется "bipolartrans.tsc", графики прилагаемые к решению также находятся в директории "Файлы Tina"</b>
+<b>Файл решение на модели "TINA", которые находится в директории "Tina Files" и называется "cascad_ysil_BP_trans.tsc", графики прилагаемые к решению также находятся в директории "Tina Files"</b>
 </p>
 
 </body>
